--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>智课云</title>
-<script>
-function displayDate(){
-	document.getElementById("demo").innerHTML=Date();
-}
-</script>
+<head> 
+<meta charset="utf-8"> 
+<title>智课云test</title> 
 </head>
 <body>
-
-<h1>我的第一个 JavaScript 程序</h1>
-<p id="demo">这是一个段落</p>
-
-<button type="button" onclick="displayDate()">显示日期</button>
-
+	
+<script>
+function changeImage()
+{
+	element=document.getElementById('myimage')
+	if (element.src.match("bulbon"))
+	{
+		element.src="/images/pic_bulboff.gif";
+	}
+	else
+	{
+		element.src="/images/pic_bulbon.gif";
+	}
+}
+</script>
+<img id="myimage" onclick="changeImage()" src="/images/pic_bulboff.gif" width="100" height="180">
+<p>点击灯泡就可以打开或关闭这盏灯</p>
+	
 </body>
 </html>
