--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 if (sender === 'ai') {
                     messageElement.innerHTML = `
                         <div class="ai-header">
-                            <i class="fas fa-robot"></i>
+                            <img src="tes.png"class="custom-icon">
                             <h3>AI助手</h3>
                         </div>
                         <p>${text}</p>
@@ -699,7 +699,7 @@
                     welcomeMessage.className = 'message ai-message';
                     welcomeMessage.innerHTML = `
                         <div class="ai-header">
-                            <i class="fas fa-robot"></i>
+                            <img src="tes.png"class="custom-icon">
                             <h3>AI助手</h3>
                         </div>
                         <p>您好！现在是${featureName}模式，有什么可以帮您的吗？</p>
