--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 <!-- <div class="avatar">U</div> -->
                 <img src="jkl.png"class="custom-icon-user">
                 <div class="user-info">
-                    <h4>用户</h4>
+                    <h4>jackylove</h4>
                     <p>高级会员</p>
                 </div>
             </div>
