--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 typingElement.className = 'message ai-message';
                 typingElement.innerHTML = `
                     <div class="ai-header">
-                        <i class="fas fa-robot"></i>
+                        <img src="tes.png"class="custom-icon">
                         <h3>AI助手</h3>
                     </div>
                     <div class="typing-indicator">
